@@ -88,6 +88,11 @@ if [ -r "$MK_CONFDIR/fileinfo.cfg" ] ; then
     stat -f "%N|%z|%m" $(cat "$MK_CONFDIR/fileinfo.cfg")
 fi
 
+if type tmutil >/dev/null
+then
+    echo '<<<timemachine>>>'
+    tmutil latestbackup
+fi
 
 ###############################
 # Things up for takers:
