@@ -4,6 +4,7 @@
     * 0073 moxa_iologik_register: new check to monitor moxa e2000 series registers
     * 0105 apc_humidity: New Check for humidity levels on APC Devices
     * 0106 3ware_units: The verifying state is now handled as ok...
+    * 0086 timemachine: new check...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
